[gd_scene load_steps=7 format=3 uid="uid://bmvjneqr0n6rv"]

[ext_resource type="Script" path="res://game/wirehack_scene.gd" id="1_k5kc0"]
[ext_resource type="Script" path="res://game/player/player_hack_controller.gd" id="2_wth00"]
[ext_resource type="PackedScene" uid="uid://ce7vb6mxloa4k" path="res://scenes/components/wire.tscn" id="3_yd1s4"]
[ext_resource type="PackedScene" uid="uid://dqb6jl6hj0wk4" path="res://scenes/components/or_gate.tscn" id="4_i1cog"]
[ext_resource type="PackedScene" uid="uid://bq0r6dpjumyjn" path="res://scenes/components/logic_in.tscn" id="7_ftmv2"]
[ext_resource type="PackedScene" uid="uid://bsneb5dbia1mu" path="res://scenes/components/logic_out.tscn" id="8_plcbm"]

[node name="TutorialHackScene" type="CanvasLayer"]
script = ExtResource("1_k5kc0")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 1200.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.627451)

[node name="PlayerHackController" type="Node" parent="."]
script = ExtResource("2_wth00")

[node name="succeed" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 381.0
offset_top = -83.0
offset_right = 505.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
text = "Succeed hack"

[node name="fail" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 381.0
offset_top = -35.0
offset_right = 505.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Fail hack"

[node name="cancel" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 393.0
offset_top = 13.0
offset_right = 493.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Cancel hack"

[node name="Wire" parent="." node_paths=PackedStringArray("inputs") instance=ExtResource("3_yd1s4")]
position = Vector2(471, 271)
scale = Vector2(16, 1)
inputs = [NodePath("../LogicIn")]

[node name="Wire2" parent="." node_paths=PackedStringArray("inputs") instance=ExtResource("3_yd1s4")]
position = Vector2(471, 309)
scale = Vector2(16, 1)
inputs = [NodePath("../LogicIn2")]

[node name="Wire3" parent="." node_paths=PackedStringArray("inputs") instance=ExtResource("3_yd1s4")]
position = Vector2(578, 289)
scale = Vector2(16, 1)
inputs = [NodePath("../OrGate")]

[node name="OrGate" parent="." node_paths=PackedStringArray("inputs") instance=ExtResource("4_i1cog")]
position = Vector2(522, 289)
scale = Vector2(2, 2)
inputs = [NodePath("../Wire"), NodePath("../Wire2")]

[node name="OR" type="Label" parent="OrGate"]
offset_left = -2.0
offset_top = -6.5
offset_right = 38.0
offset_bottom = 16.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "OR"

[node name="LogicIn" parent="." instance=ExtResource("7_ftmv2")]
position = Vector2(442, 270)

[node name="LogicIn2" parent="." instance=ExtResource("7_ftmv2")]
position = Vector2(442, 308)

[node name="LogicOut" parent="." node_paths=PackedStringArray("inputs") instance=ExtResource("8_plcbm")]
position = Vector2(610, 290)
inputs = [NodePath("../Wire3")]

[node name="Goal1" type="Label" parent="."]
offset_left = 639.0
offset_top = 252.0
offset_right = 679.0
offset_bottom = 301.0
text = "Goal:
1"
horizontal_alignment = 1

[node name="Tip1" type="Label" parent="."]
offset_left = 260.0
offset_top = 173.0
offset_right = 856.0
offset_bottom = 196.0
text = "OR gate: if ANY of the inputs are 1, the output is 1. Otherwise, the output is 0."
horizontal_alignment = 1

[connection signal="button_down" from="succeed" to="." method="_on_success"]
[connection signal="button_down" from="fail" to="." method="_on_fail"]
[connection signal="button_down" from="cancel" to="." method="_on_cancel"]
